<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf5e4"
    tools:context="com.example.ready2eat.View.LogIn">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_foto"
        android:tint="#f8b400"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:background="@drawable/logo"
        android:layout_marginTop="90dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView3" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:drawableLeft="@drawable/ic_phone_black"
        android:gravity="center_horizontal"
        android:hint="Numar de telefon"
        android:inputType="phone"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:met_baseColor="#000000"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="10"
        app:met_primaryColor="#000000"
        app:met_singleLineEllipsis="true"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:drawableLeft="@drawable/ic_lock_black"
        android:gravity="center_horizontal"
        android:hint="Parola"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:met_baseColor="#000000"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="20"
        app:met_primaryColor="#000000"
        app:met_singleLineEllipsis="true"
        app:layout_constraintTop_toBottomOf="@id/edtPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.rey.material.widget.CheckBox
        android:id="@+id/ckbRemember"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="Remember me"
        android:textColor="@android:color/black"
        app:cbd_strokeColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />
  
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="300dp"
        android:background="@drawable/btn_rounded"
        android:backgroundTintMode="src_in"
        android:text="Autentificare"
        android:textColor="#faf5e4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ckbRemember" />

</androidx.constraintlayout.widget.ConstraintLayout>
