<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.FoodList">

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchBar"
        android:layout_alignParentTop="true"
        app:mt_speechMode="false"
        android:background="#f7efd2"
        app:mt_hint="Cauta mancarea"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/searchBar"
        android:id="@+id/recycler_food"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:background="#f7efd2"
        />
</RelativeLayout>
