...
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:translationZ="30dp"
                >

                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:id="@+id/number_button"
                    android:layout_width="120dp"
                    android:layout_height="37dp"
                    android:layout_marginEnd="7dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="332dp"
                    android:layout_marginBottom="5dp"
...
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#faf5e4">

        <Button
            android:id="@+id/btnCart"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="Adauga in cos"
            android:textColor="#faf5e4"
            android:layout_alignParentBottom="true"
...
