<resources>
    <string name="app_name">Ready2Eat</string>
    <string name="slogan">Ready to eat? We will feed you!</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="_1_000">1,000</string>
    <string name="food_name">Food Name</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="lei">Lei</string>
    <string name="_10_00_lei">10.00 Lei</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total:</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="last_step">Ultimul pas!</string>
    <string name="current_time">Puteti prelua comanda incepand cu ora</string>
    <string name="confirm_hour">CONFIRMĂ ORA</string>

</resources>